feat: implement jwt validation